force-app/main/default/objects/Bargaining_Unit__c/fields/BUS_Code__c.field-meta.xml
<CustomField>
    <fullName>BUS_Code__c</fullName>
    <description>Bargaining Unit Status (BUS) Code</description>
    <inlineHelpText>Bargaining Unit Status (BUS) Code</inlineHelpText>
    <label>BUS Code</label>
    <length>155</length>
    <type>Text</type>
</CustomField>