force-app/main/default/objects/Bargaining_Unit__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <label>Local</label>
    <length>155</length>
    <type>Text</type>
</CustomField>