force-app/main/default/objects/Bargaining_Unit__c/fields/Sub_Agency__c.field-meta.xml
<CustomField>
    <fullName>Sub_Agency__c</fullName>
    <label>Sub-Agency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>