force-app/main/default/objects/Bargaining_Unit__c/fields/Union_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Union_Acronym__c</fullName>
    <label>Union Acronym</label>
    <length>155</length>
    <type>Text</type>
</CustomField>