force-app/main/default/objects/Bargaining_Unit__c/fields/Union_Name__c.field-meta.xml
<CustomField>
    <fullName>Union_Name__c</fullName>
    <label>Union Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>