force-app/main/default/objects/Bargaining_Unit__c/fields/Year_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Year_Recognized__c</fullName>
    <label>Year Recognized</label>
    <length>4</length>
    <type>Text</type>
</CustomField>